force-app/main/default/objects/Product2/fields/Codice_magazzino__c.field-meta.xml
<CustomField>
    <fullName>Codice_magazzino__c</fullName>
    <label>Codice magazzino</label>
    <length>2</length>
    <type>Text</type>
</CustomField>