force-app/main/default/objects/Product2/fields/Costo_lavorazione__c.field-meta.xml
<CustomField>
    <fullName>Costo_lavorazione__c</fullName>
    <label>Costo lavorazione</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>