force-app/main/default/objects/Product2/fields/Costo_materiale__c.field-meta.xml
<CustomField>
    <fullName>Costo_materiale__c</fullName>
    <label>Costo materiale</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>