force-app/main/default/objects/Product2/fields/CSPMTE__c.field-meta.xml
<CustomField>
    <fullName>CSPMTE__c</fullName>
    <label>Costo standard materiali</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>