force-app/main/default/objects/Product2/fields/Description_CN__c.field-meta.xml
<CustomField>
    <fullName>Description_CN__c</fullName>
    <label>Product Description CN</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>