force-app/main/default/objects/Product2/fields/Description_DE__c.field-meta.xml
<CustomField>
    <fullName>Description_DE__c</fullName>
    <label>Product Description DE</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>