force-app/main/default/objects/Product2/fields/Description_EN__c.field-meta.xml
<CustomField>
    <fullName>Description_EN__c</fullName>
    <label>Product Description EN</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>