force-app/main/default/objects/Product2/fields/Giacenza__c.field-meta.xml
<CustomField>
    <fullName>Giacenza__c</fullName>
    <label>Giacenza</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>