force-app/main/default/objects/Product2/fields/Introduction__c.field-meta.xml
<CustomField>
    <fullName>Introduction__c</fullName>
    <label>Introduction</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>