force-app/main/default/objects/Product2/fields/Introduction_CN__c.field-meta.xml
<CustomField>
    <fullName>Introduction_CN__c</fullName>
    <label>Introduction CN</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>