force-app/main/default/objects/Product2/fields/Introduction_DE__c.field-meta.xml
<CustomField>
    <fullName>Introduction_DE__c</fullName>
    <label>Introduction DE</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>