force-app/main/default/objects/Product2/fields/Introduction_EN__c.field-meta.xml
<CustomField>
    <fullName>Introduction_EN__c</fullName>
    <label>Introduction EN</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>