force-app/main/default/objects/Product2/fields/Link_Immagine_Sito__c.field-meta.xml
<CustomField>
    <fullName>Link_Immagine_Sito__c</fullName>
    <label>Link Immagine Sito</label>
    <length>200</length>
    <type>Text</type>
</CustomField>