force-app/main/default/objects/Product2/fields/Name_CN__c.field-meta.xml
<CustomField>
    <fullName>Name_CN__c</fullName>
    <label>Product Name CN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>