force-app/main/default/objects/Product2/fields/Struct__c.field-meta.xml
<CustomField>
    <fullName>Struct__c</fullName>
    <label>Struct</label>
    <length>80000</length>
    <type>Html</type>
</CustomField>