force-app/main/default/objects/Product2/fields/Struct_CN__c.field-meta.xml
<CustomField>
    <fullName>Struct_CN__c</fullName>
    <label>Struct CN</label>
    <length>80000</length>
    <type>Html</type>
</CustomField>