force-app/main/default/objects/Product2/fields/Struct_DE__c.field-meta.xml
<CustomField>
    <fullName>Struct_DE__c</fullName>
    <label>Struct DE</label>
    <length>80000</length>
    <type>Html</type>
</CustomField>