force-app/main/default/objects/Product2/fields/Struct_EN__c.field-meta.xml
<CustomField>
    <fullName>Struct_EN__c</fullName>
    <label>Struct EN</label>
    <length>80000</length>
    <type>Html</type>
</CustomField>