force-app/main/default/objects/Product2/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>Summary</label>
    <length>50768</length>
    <type>Html</type>
</CustomField>