force-app/main/default/objects/Product2/fields/Summary_CN__c.field-meta.xml
<CustomField>
    <fullName>Summary_CN__c</fullName>
    <label>Summary CN</label>
    <length>50768</length>
    <type>Html</type>
</CustomField>