force-app/main/default/objects/Product2/fields/Summary_DE__c.field-meta.xml
<CustomField>
    <fullName>Summary_DE__c</fullName>
    <label>Summary DE</label>
    <length>50768</length>
    <type>Html</type>
</CustomField>