force-app/main/default/objects/Product2/fields/Summary_EN__c.field-meta.xml
<CustomField>
    <fullName>Summary_EN__c</fullName>
    <label>Summary EN</label>
    <length>50768</length>
    <type>Html</type>
</CustomField>