force-app/main/default/objects/Product2/fields/Table__c.field-meta.xml
<CustomField>
    <fullName>Table__c</fullName>
    <label>Table</label>
    <length>50768</length>
    <type>Html</type>
</CustomField>