force-app/main/default/objects/Product2/fields/Table_CN__c.field-meta.xml
<CustomField>
    <fullName>Table_CN__c</fullName>
    <label>Table CN</label>
    <length>50768</length>
    <type>Html</type>
</CustomField>