force-app/main/default/objects/Product2/fields/Table_DE__c.field-meta.xml
<CustomField>
    <fullName>Table_DE__c</fullName>
    <label>Table DE</label>
    <length>50768</length>
    <type>Html</type>
</CustomField>