force-app/main/default/objects/Product2/fields/Table_EN__c.field-meta.xml
<CustomField>
    <fullName>Table_EN__c</fullName>
    <label>Table EN</label>
    <length>50768</length>
    <type>Html</type>
</CustomField>