force-app/main/default/objects/Product2/fields/Tipo_di_macchina__c.field-meta.xml
<CustomField>
    <fullName>Tipo_di_macchina__c</fullName>
    <label>Modello</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MTL X5</fullName>
            </value>
            <value>
                <fullName>MTL 250</fullName>
            </value>
            <value>
                <fullName>MTL 300 Evo</fullName>
            </value>
            <value>
                <fullName>MTL 500x60 Evo</fullName>
            </value>
            <value>
                <fullName>MTL 500x120 Evo</fullName>
            </value>
            <value>
                <fullName>MTL 500x60 Ergon</fullName>
            </value>
            <value>
                <fullName>MTL 500x120 Ergon</fullName>
            </value>
            <value>
                <fullName>MTL 850x60 Ergon</fullName>
            </value>
            <value>
                <fullName>MTL 850x120 Ergon</fullName>
            </value>
            <value>
                <fullName>MTL 1250x120 Ergon</fullName>
            </value>
            <value>
                <fullName>MTL 500x120 Ergon S</fullName>
            </value>
            <value>
                <fullName>MTL 850x120 Ergon S</fullName>
            </value>
            <value>
                <fullName>MTL 1250x120 Ergon S</fullName>
            </value>
            <value>
                <fullName>MTL 500x170 X-Stream</fullName>
            </value>
            <value>
                <fullName>MTL 850x170 X-Stream</fullName>
            </value>
            <value>
                <fullName>MTL 1250x170 X-Stream</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>