force-app/main/default/objects/Product2/fields/Ubicazione__c.field-meta.xml
<CustomField>
    <fullName>Ubicazione__c</fullName>
    <label>Ubicazione</label>
    <length>5</length>
    <type>Text</type>
</CustomField>